[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chrono-vcs"
version = "1.0.0"
authors = [
  { name="Pruthvish S Kulkarni", email="pruthvishkulkarni572@gmail.com" },
]
description = "A snapshot-based Version Control System built from scratch in Python."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT License" }  # Fixes the License Warning
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
chrono = "cli:main"

# CRITICAL FIX: Explicitly list your flat modules so setuptools doesn't guess
[tool.setuptools]
py-modules = ["checkout", "cli", "commits", "constants", "diff", "objects", "repository", "utils"]